# 065-llm-sentiment-analysis

./: README.md  README.ru.md  README.simple.md  README.specify.md  readme.simple.ru.md
python/: 01_data_collection.py  02_preprocessing.py  03_finbert_sentiment.py  04_gpt_sentiment.py  05_crypto_sentiment.py
rust_llm_sentiment/: Cargo.toml  README.md
rust_llm_sentiment/examples/: analyze_sentiment.rs  backtest.rs  crypto_sentiment.rs  fetch_news.rs  trading_signals.rs
rust_llm_sentiment/src/: lib.rs
rust_llm_sentiment/src/api/: bybit.rs  mod.rs
rust_llm_sentiment/src/sentiment/: aggregator.rs  analyzer.rs  crypto.rs  lexicon.rs  mod.rs
rust_llm_sentiment/src/strategy/: backtest.rs  mod.rs  signals.rs
