[package]
name = "llm_sentiment"
version = "0.1.0"
edition = "2021"
authors = ["ML4Trading"]
description = "LLM Sentiment Analysis for cryptocurrency trading with Bybit data"
license = "MIT"
readme = "README.md"

[dependencies]
# HTTP client for API requests
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Numeric computing
ndarray = { version = "0.15", features = ["serde"] }

# Random number generation
rand = "0.8"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"
tracing = "0.1"

# CSV for data export
csv = "1.3"

# Progress bars
indicatif = "0.17"

# Command line arguments
clap = { version = "4.4", features = ["derive"] }

# Async utilities
futures = "0.3"

# HMAC for API authentication
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Regex for text processing
regex = "1.10"

# Unicode normalization
unicode-normalization = "0.1"

[dev-dependencies]
tokio-test = "0.4"
approx = "0.5"

[[example]]
name = "fetch_news"
path = "examples/fetch_news.rs"

[[example]]
name = "analyze_sentiment"
path = "examples/analyze_sentiment.rs"

[[example]]
name = "crypto_sentiment"
path = "examples/crypto_sentiment.rs"

[[example]]
name = "trading_signals"
path = "examples/trading_signals.rs"

[[example]]
name = "backtest"
path = "examples/backtest.rs"
